fix crash during xls import, related fdo#36580

Looks like a possibly invalid xls file but let us just do the right
thing and not crash.

Change-Id: Id96db06798cd19d96938ca84956046e5a5e5b529